    on OpenBSD (which has non-ELF object files) motivated some cleanups
    in the way that foreign symbols are transformed and passed around.
  * minor incompatible change: The ASCII RUBOUT character, (CHAR-CODE 127),
    is no longer treated as whitespace by the reader, but instead as
    an ordinary character. Thus e.g. (READ-FROM-STRING "AB") returns
    |AB|, instead of A as it used to.

changes in sbcl-0.7.5 relative to sbcl-0.7.4:
  * bug 140 fixed: redefinition of classes with different supertypes
    is now reflected in the type hierarchy. (thanks to Pierre Mai)
  * bug 158 fixed: the compiler can now deal with integer loop
    increments different from 1; fixing this turned out also to fix
    bug 164.
  * bug 169 fixed: no more bogus warnings about using lexical bindings
    despite the presence of perfectly good SPECIAL declarations. (thanks
    to David Lichteblau)
  * bug fix: Structure type predicate functions now check their argument
    count as they should.
  * minor incompatible change: The LOAD function no longer, when given
    a wild pathname to load, loads all files matching that pathname;
    instead, an error of type FILE-ERROR is signalled.

planned incompatible changes in 0.7.x:
* When the profiling interface settles down, maybe in 0.7.x, maybe
  later, it might impact TRACE. They both encapsulate functions, and
  it's not clear yet how e.g. UNPROFILE will interact with TRACE
  and UNTRACE. (This shouldn't matter, though, unless you are
  using profiling. If you never profile anything, TRACE should
  continue to behave as before.)
* Inlining can now be controlled the ANSI way, without
  MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
  now does what ANSI says it should. The CMU-CL-style 
  SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.